Package_Tools/include-C/webkitgtk-6.0/jsc/in_arbeit/fertig/JSCClass.h

#define JSC_TYPE_CLASS            (jsc_class_get_type())
extern const char *
jsc_class_get_name                 (JSCClass      *jsc_class);
extern JSCClass *
jsc_class_get_parent               (JSCClass      *jsc_class);
extern JSCValue *
jsc_class_add_constructor          (JSCClass      *jsc_class,
                                    const char    *name,
                                    GCallback      callback,
                                    gpointer       user_data,
                                    GDestroyNotify destroy_notify,
                                    GType          return_type,
                                    guint          n_params,
                                    ...);
extern JSCValue *
jsc_class_add_constructorv         (JSCClass      *jsc_class,
                                    const char    *name,
                                    GCallback      callback,
                                    gpointer       user_data,
                                    GDestroyNotify destroy_notify,
                                    GType          return_type,
                                    guint          n_parameters,
                                    GType         *parameter_types);
extern JSCValue *
jsc_class_add_constructor_variadic (JSCClass      *jsc_class,
                                    const char    *name,
                                    GCallback      callback,
                                    gpointer       user_data,
                                    GDestroyNotify destroy_notify,
                                    GType          return_type);
extern void
jsc_class_add_method               (JSCClass      *jsc_class,
                                    const char    *name,
                                    GCallback      callback,
                                    gpointer       user_data,
                                    GDestroyNotify destroy_notify,
                                    GType          return_type,
                                    guint          n_params,
                                    ...);
extern void
jsc_class_add_methodv              (JSCClass      *jsc_class,
                                    const char    *name,
                                    GCallback      callback,
                                    gpointer       user_data,
                                    GDestroyNotify destroy_notify,
                                    GType          return_type,
                                    guint          n_parameters,
                                    GType         *parameter_types);
extern void
jsc_class_add_method_variadic      (JSCClass      *jsc_class,
                                    const char    *name,
                                    GCallback      callback,
                                    gpointer       user_data,
                                    GDestroyNotify destroy_notify,
                                    GType          return_type);
extern void
jsc_class_add_property             (JSCClass      *jsc_class,
                                    const char    *name,
                                    GType          property_type,
                                    GCallback      getter,
                                    GCallback      setter,
                                    gpointer       user_data,
                                    GDestroyNotify destroy_notify);